# phagetrix

./: .flake8  .gitignore  .pre-commit-config.yaml  .windsurfrules  CHANGELOG.md  CONTRIBUTING.md  DEPLOYMENT.md  LIBRARY_USAGE.md  Makefile  PYTHON_PACKAGE_INFRASTRUCTURE_PROMPTS.md  README.md  RELEASE.md  SECURITY.md  maintainernotes.md  phagetrix.ipynb  pyproject.toml  sample.phagetrix  tox.ini
.github/: SETUP.md  WORKFLOWS.md  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: auto-release.yml  check.yml  release.yml  version-bump.yml
.windsurf/rules/: git-commit.md
examples/: library_examples.py  pal.phagetrix  phagetrix.ipynb
scripts/: bump_version.py
src/phagetrix/: __init__.py  api.py  cli.py  constants.py  core.py  exec.py  output.py  parser.py  trix.py
tests/: test_api.py  test_codon_gen.py  test_command.py  test_linting.py  test_security.py
