[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "phagetrix"
version = "1.0.6"
description = "Optimizer for degenerate codon use in phage library generation"
authors = [{name = "Reto Stamm", email = "reto@retospect.ch"}]
readme = "README.md"
license = "GPL-3.0-or-later"
requires-python = ">=3.11"
keywords = [
    "bioinformatics",
    "phage-display",
    "codon-optimization",
    "molecular-biology",
    "protein-engineering",
    "synthetic-biology",
    "directed-evolution",
    "dna-synthesis",
    "degenerate-codons",
    "library-design",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "python-codon-tables>=0.1.12",
    "quantiphy>=2.19",
]

[project.urls]
Homepage = "https://github.com/retospect/phagetrix"
Repository = "https://github.com/retospect/phagetrix"
Documentation = "https://github.com/retospect/phagetrix"
"Bug Tracker" = "https://github.com/retospect/phagetrix/issues"

[project.scripts]
phagetrix = "phagetrix.cli:main"

[dependency-groups]
dev = [
    "pytest>=8",
    "ruff>=0.11",
    "mypy>=1.15",
    "pre-commit>=4",
]

[tool.ruff]
target-version = "py311"
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "RUF"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
check_untyped_defs = true

[[tool.mypy.overrides]]
module = [
    "python_codon_tables.*",
    "quantiphy.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
